Added last transition time Added documentation
