# pkg/apis/core/v1alpha1/types.go
@@ -145,12 +145,11 @@ type DataVolumeList struct {
 
 // DataVolumeCondition represents the state of a data volume condition.
 type DataVolumeCondition struct {
-	Type   DataVolumeConditionType `json:"type" description:"type of condition ie. Ready|Bound|Running."`
-	Status corev1.ConditionStatus  `json:"status" description:"status of the condition, one of True, False, Unknown"`
-	// +optional
-	Reason string `json:"reason,omitempty" description:"one-word CamelCase reason for the condition's last transition"`
-	// +optional
-	Message string `json:"message,omitempty" description:"human-readable message indicating details about last transition"`
+	Type               DataVolumeConditionType `json:"type" description:"type of condition ie. Ready|Bound|Running."`
+	Status             corev1.ConditionStatus  `json:"status" description:"status of the condition, one of True, False, Unknown"`
+	LastTransitionTime metav1.Time             `json:"lastTransitionTime,omitempty"`
+	Reason             string                  `json:"reason,omitempty" description:"reason for the condition's last transition"`
+	Message            string                  `json:"message,omitempty" description:"human-readable message indicating details about last transition"`
 }
 
 // DataVolumePhase is the current phase of the DataVolume
